# classification-multi-choice

./: Classification of Multiple-Choice Questions.ipynb  README.md  chat_gpt_classifier.py  encoding_data.py  pyproject.toml  text_classifier.py  text_preprocessing.py
