[tool.poetry]
name = "classification-multi-choice"
version = "0.1.0"
description = ""
authors = ["ivan-bulka <ivan.bulka0107@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
notebook = "^7.1.2"
sentence-transformers = "^2.6.1"
torch = "2.2.0"
xgboost = "^2.0.3"
langchain-openai = "^0.1.1"
langchain-core = "^0.1.36"
nltk = "^3.8.1"
spacy = "^3.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
